Switch addNode to action, add stage handler.

--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -20,7 +20,7 @@
                     <input id="node-to-add" class="gui-input gui-text" type="text" name="nodeName" />
                 </td>
                 <td class="button-column">
-                    <a id="add-node-button" class="gui-point-button gui-text-bold right">
+                    <a class="gui-point-button gui-text-bold right" {{action addNode target="controller"}}>
                         <span class="gui-button-msg">ADD NODES</span>
                     </a>
                 </td>
