--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -575,9 +575,7 @@ input.gui-point-button-right:active {
   background-position: left bottom;
 }
 .gui-checkbox-wrapper span,
-.gui-radio-wrapper span,
-.gui-checkbox-wrapper label,
-.gui-radio-wrapper label {
+.gui-radio-wrapper span {
   font-family: 'titillium', helvetica, arial, sans-serif;
   font-weight: bold;
   display: inline-block;
@@ -585,9 +583,7 @@ input.gui-point-button-right:active {
   color: #efefef;
 }
 .gui-checkbox-wrapper span.serif,
-.gui-radio-wrapper span.serif,
-.gui-checkbox-wrapper label.serif,
-.gui-radio-wrapper label.serif {
+.gui-radio-wrapper span.serif {
   font-family: 'noticia', georgia, serif;
   font-weight: normal;
   color: #ccc;
@@ -1025,6 +1021,7 @@ input.gui-point-button-right:active {
   transition: height 0.4s ease;
   overflow: hidden;
   height: 0;
+  margin-bottom: 0;
 }
 #cluster-page .open .actions-container {
   -webkit-transition: height 0.4s ease;
@@ -1034,7 +1031,8 @@ input.gui-point-button-right:active {
   -moz-transition: height 0.4s ease;
   -o-transition: height 0.4s ease;
   transition: height 0.4s ease;
-  height: 250px;
+  height: 310px;
+  margin-bottom: 25px;
 }
 #cluster-page .gui-light {
   vertical-align: middle;
@@ -1352,26 +1350,44 @@ input.gui-point-button-right:active {
   margin-right: 33px;
   position: relative;
 }
-#cluster-page .actions-box > span {
+#cluster-page .actions-box > h4 {
   display: block;
   border-bottom: 1px solid rgba(255,255,255,0.18);
-  padding: 0 0 10px;
+  padding: 0 0 12px;
 }
 #cluster-page .actions-box > div > span {
   font-family: 'noticia', georgia, serif;
   color: #efefef;
   padding-left: 3px;
 }
+#cluster-page .extra-actions {
+  opacity: 0.32;
+  filter: alpha(opacity=32);
+  padding-bottom: 25px;
+  height: 35px;
+  position: relative;
+}
+#cluster-page .extra-actions > div {
+  float: left;
+}
+#cluster-page .extra-actions .gui-checkbox-wrapper {
+  margin-left: 15px;
+}
+#cluster-page .extra-actions.active {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
 #cluster-page .replacement-controls {
   width: auto;
   margin-top: 18px;
+  border-bottom: 1px solid rgba(255,255,255,0.18);
+  margin-bottom: 10px;
 }
 #cluster-page .replacement-controls div {
   margin-bottom: 8px;
 }
 #cluster-page .replacement-controls select {
   margin-top: -38px;
-  min-width: 300px;
 }
 #cluster-page .replacement-node-dropdown {
   margin-bottom: 5px;
@@ -1383,9 +1399,8 @@ input.gui-point-button-right:active {
   margin: 0 10px 0 10px;
 }
 #cluster-page .disabler {
-  background: #f00;
-  opacity: 0.2;
-  filter: alpha(opacity=20);
+  opacity: 0;
+  filter: alpha(opacity=0);
   position: absolute;
   left: 0;
   top: 0;
@@ -1401,11 +1416,6 @@ input.gui-point-button-right:active {
   display: block;
   width: 50%;
 }
-#cluster-page .stage-button {
-  position: absolute;
-  bottom: 18px;
-  right: 18px;
-}
 @media screen and (max-width : 1200px) {
   #cluster-page #area-separator {
     display: none;
@@ -1417,9 +1427,6 @@ input.gui-point-button-right:active {
   #cluster-page #planned-area {
     padding-top: 30px;
     border-top: 1px solid rgba(255,255,255,0.18);
-  }
-  #cluster-page .actions-box {
-    width: 96%;
   }
   #cluster-page .field-container {
     width: 90%;
