--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -561,21 +561,38 @@ input.gui-point-button-right:active {
 .gui-switch.off {
   background-position: left bottom;
 }
-.gui-checkbox-wrapper {
+.gui-checkbox-wrapper,
+.gui-radio-wrapper {
   width: auto;
   height: 24px;
   background: url("/admin/ui/images/checkbox-sprite.png") left top no-repeat transparent;
   vertical-align: middle;
   margin-top: 5px;
 }
-.gui-checkbox-wrapper span {
+.gui-checkbox-wrapper.default,
+.gui-radio-wrapper.default {
+  background-position: left bottom;
+}
+.gui-checkbox-wrapper span,
+.gui-radio-wrapper span {
   font-family: 'titillium', helvetica, arial, sans-serif;
   font-weight: bold;
   display: inline-block;
   margin: 5px 0 0 8px;
   color: #efefef;
 }
-.gui-checkbox {
+.gui-checkbox-wrapper span.serif,
+.gui-radio-wrapper span.serif {
+  font-family: 'noticia', georgia, serif;
+  font-weight: normal;
+  color: #ccc;
+  font-style: italic;
+}
+.gui-radio-wrapper {
+  background: url("/admin/ui/images/radio-sprite.png") left top no-repeat transparent;
+}
+.gui-checkbox,
+.gui-radio {
   width: 25px;
   height: 24px;
   opacity: 0;
@@ -584,8 +601,8 @@ input.gui-point-button-right:active {
   float: left;
   margin: 0;
 }
-.gui-checkbox[checked=checked],
-.gui-checkbox-wrapper .gui-text {
+.gui-checkbox-wrapper .gui-text,
+.gui-radio-wrapper .gui-text {
   width: auto;
   height: 24px;
   display: block;
@@ -967,6 +984,7 @@ input.gui-point-button-right:active {
   transition: height 0.4s ease;
   overflow: hidden;
   height: 0;
+  margin-bottom: 0;
 }
 #cluster-page .open .actions-container {
   -webkit-transition: height 0.4s ease;
@@ -976,7 +994,8 @@ input.gui-point-button-right:active {
   -moz-transition: height 0.4s ease;
   -o-transition: height 0.4s ease;
   transition: height 0.4s ease;
-  height: 250px;
+  height: 310px;
+  margin-bottom: 25px;
 }
 #cluster-page .gui-light {
   vertical-align: middle;
@@ -1291,37 +1310,71 @@ input.gui-point-button-right:active {
   margin-right: 33px;
   position: relative;
 }
-#cluster-page .actions-box > span {
+#cluster-page .actions-box > h4 {
   display: block;
   border-bottom: 1px solid rgba(255,255,255,0.18);
-  padding: 0 0 10px;
+  padding: 0 0 12px;
 }
 #cluster-page .actions-box > div > span {
-  font-family: 'titillium', helvetica, arial, sans-serif;
-  font-weight: bold;
+  font-family: 'noticia', georgia, serif;
   color: #efefef;
   padding-left: 3px;
+}
+#cluster-page .extra-actions {
+  opacity: 0.32;
+  filter: alpha(opacity=32);
+  padding-bottom: 25px;
+  height: 35px;
+  position: relative;
+}
+#cluster-page .extra-actions > div {
+  float: left;
+}
+#cluster-page .extra-actions .gui-checkbox-wrapper {
+  margin-left: 15px;
+}
+#cluster-page .extra-actions.active {
+  opacity: 1;
+  filter: alpha(opacity=100);
 }
 #cluster-page .replacement-controls {
   width: auto;
   margin-top: 18px;
+  border-bottom: 1px solid rgba(255,255,255,0.18);
+  margin-bottom: 10px;
 }
 #cluster-page .replacement-controls div {
   margin-bottom: 8px;
 }
 #cluster-page .replacement-controls select {
   margin-top: -38px;
-  min-width: 300px;
 }
 #cluster-page .replacement-node-dropdown {
-  width: 100%;
-  float: left;
   margin-bottom: 5px;
 }
-#cluster-page .stage-button {
+#cluster-page .right-angle-arrow {
+  width: 15px;
+  height: 18px;
+  background: url("/admin/ui/images/right-angle-arrow.png") left top no-repeat transparent;
+  margin: 0 10px 0 10px;
+}
+#cluster-page .disabler {
+  opacity: 0;
+  filter: alpha(opacity=0);
   position: absolute;
-  bottom: 18px;
-  right: 18px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+}
+#cluster-page .stage-button {
+  float: right;
+}
+#cluster-page .stage-instructions {
+  float: left;
+  display: block;
+  width: 50%;
 }
 @media screen and (max-width : 1200px) {
   #cluster-page #area-separator {
@@ -1334,9 +1387,6 @@ input.gui-point-button-right:active {
   #cluster-page #planned-area {
     padding-top: 30px;
     border-top: 1px solid rgba(255,255,255,0.18);
-  }
-  #cluster-page .actions-box {
-    width: 96%;
   }
   #cluster-page .field-container {
     width: 90%;
