--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -26,9 +26,9 @@
                 </td>
             </tr>
         </table>
-        <div id="node-error" class="hide">
+        <div class="error-message hide">
             <a class="close-error gui-text"></a>
-            <a class="error-text offline"></a>
+            <a class="error-text offline gui-text-flat"></a>
             <a class="error-link gui-text underline" href="#"></a>
         </div>
     </div><!-- #add-node -->
