Add stage handler.

--- a/priv/admin/js/templates/current_cluster_item.hbs
+++ b/priv/admin/js/templates/current_cluster_item.hbs
@@ -83,7 +83,7 @@
                 </div>
                 <div class="clear"></div>
                 <span class="gui-text-flat serif italic stage-instructions">Click "STAGE" when you are ready to stage this action.</span>
-                <a class="stage-button gui-point-button-right gui-text-bold right">
+                <a class="stage-button gui-point-button-right gui-text-bold right" {{action stageChange target="view"}}>
                     <span class="gui-button-msg">STAGE</span>
                 </a>
                 <div class="clear"></div>
@@ -92,5 +92,5 @@
         </div><!-- .actions-box -->
         <div class="clear"></div>
     </div><!-- .node -->
-    
+
 {{/with}}
