Wire up stage action.

--- a/priv/admin/js/templates/current_cluster_item.hbs
+++ b/priv/admin/js/templates/current_cluster_item.hbs
@@ -52,11 +52,11 @@
                 <h4 class="gui-headline-bold">Use these actions to prepare this node to leave the cluster.</h4>
                 <div class="replacement-controls">
                     <div class="gui-radio-wrapper default">
-                        <input class="gui-radio" type="radio" value="leavenormal" {{bindAttr name="name"}} checked="checked"/>
+                        <input class="gui-radio" type="radio" value="leave" {{bindAttr name="name"}} checked="checked"/>
                         <span class="serif">Allow this node to leave normally.</span>
                     </div>
                     <div class="gui-radio-wrapper">
-                        <input class="gui-radio" type="radio" value="forceleave" {{bindAttr name="name"}} />
+                        <input class="gui-radio" type="radio" value="remove" {{bindAttr name="name"}} />
                         <span class="serif">Force this node to leave.</span>
                     </div>
                     <div class="gui-radio-wrapper">
@@ -71,7 +71,7 @@
                             {{view Ember.Select classNames="gui-dropdown" contentBinding="controller.joiningNodes"}}
                         </div>
                         <div class="gui-checkbox-wrapper">
-                            <input class="gui-checkbox" type="checkbox" value="forcereplace" />
+                            <input class="gui-checkbox" type="checkbox" {{bindAttr name="name"}} value="true" />
                             <span class="serif">Force this replacement?</span>
                         </div>
                         <div class="clear"></div>
