Ensure the plan is confirmed.

--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -84,7 +84,7 @@
             <div class="accept-plan">
                 <div class="gui-checkbox-wrapper">
                     <span>This plan is correct.</span>
-                    <input class="gui-checkbox" type="checkbox" name="cluster-plan" value="accept"/>
+                    <input class="gui-checkbox" type="checkbox" name="confirmed" value="accept"/>
                   </div>
                 <a id="commit-button" class="gui-point-button-right gui-text-bold right" {{action commitPlan target="controller"}}>
                     <span class="gui-button-msg">COMMIT</span>
