--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -333,7 +333,7 @@ input.gui-point-button:active, input.gui-rect-button:active, input.gui-point-but
   &.default
     background-position : left bottom
   
-  span
+  span, label
     headline-bold()
     display    : inline-block
     margin     : 5px 0 0 8px
