--- a/priv/admin/css/snapshot.styl
+++ b/priv/admin/css/snapshot.styl
@@ -23,8 +23,9 @@ CSS to be applied ONLY on the snapshot page
       margin : 10px 0 0 20px
     
     li
-      monospace()
+      headline-font()
       line-height : 1.5
+      font-size   : 15px
       
       a
         color : lightGray
