warning message for actions on the node hosting riak control

--- a/priv/admin/css/cluster.styl
+++ b/priv/admin/css/cluster.styl
@@ -8,6 +8,10 @@ CSS to be applied ONLY on the cluster page
 
 #cluster-page
 
+  .warning
+    display : block
+    padding : 10px 0 0
+    color   : riakred
 
   #current-area, #planned-area
     float : left
@@ -59,7 +63,7 @@ CSS to be applied ONLY on the cluster page
 
   .open .actions-container
     css-transition(height .4s ease, margin-bottom .4s ease)
-    height        : 310px
+    height        : 375px
     margin-bottom : 25px
 
   .gui-light
