--- a/priv/admin/js/templates/current_cluster_item.hbs
+++ b/priv/admin/js/templates/current_cluster_item.hbs
@@ -55,7 +55,7 @@
                 {{#if me}}
                     <span class="warning gui-text-flat italic">
                         Warning: This node is hosting Riak Control.  If it leaves the
-                        cluster, Riak Control will will be shut down.
+                        cluster, Riak Control will be shut down.
                     </span>
                 {{/if}}
                 <div class="replacement-controls">
