--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -933,6 +933,15 @@ input.gui-point-button-right:active {
     text-align: left;
   }
 }
+#cluster-page .node-blocker {
+  position: absolute;
+  left: -5px;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  display: none;
+}
 #cluster-page .warning {
   display: block;
   padding: 10px 0 0;
@@ -1056,6 +1065,7 @@ input.gui-point-button-right:active {
 }
 #cluster-page .node {
   margin-bottom: 10px;
+  position: relative;
 }
 #cluster-page .node > div {
   float: left;
