colored lights; disabled actions on current cluster nodes after they have been staged

--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -969,6 +969,15 @@ input.gui-point-button-right:active {
     text-align: left;
   }
 }
+#cluster-page .node-blocker {
+  position: absolute;
+  left: -5px;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  display: none;
+}
 #cluster-page .warning {
   display: block;
   padding: 10px 0 0;
@@ -1092,6 +1101,7 @@ input.gui-point-button-right:active {
 }
 #cluster-page .node {
   margin-bottom: 10px;
+  position: relative;
 }
 #cluster-page .node > div {
   float: left;
