--- a/priv/admin/js/templates/current_cluster_item.hbs
+++ b/priv/admin/js/templates/current_cluster_item.hbs
@@ -14,9 +14,7 @@
             </div>
         </div>
         <div class="item3 gui-text ring-pct-box">
-            <div class="left pct-arrows pct-static">
-                <div class="green-pct-arrow"></div>
-            </div>
+            <div {{bindAttr class="coloredArrows"}}></div>
             <div class="left gui-text pct-box">
                 <span class="ring-pct">{{ring_pct_readable}}%</span>
             </div>
@@ -104,5 +102,6 @@
             <div class="clear"></div>
         </div><!-- .actions-box -->
         <div class="clear"></div>
+        <div class="node-blocker"></div>
     </div><!-- .node -->
 {{/with}}
