the error message now uses a handlebars condition. also fixed some scope issues created by $.ajax. removed some unneeded code from legacy.js

--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -26,11 +26,12 @@
                 </td>
             </tr>
         </table>
-        <div class="error-message hide">
-            <a class="close-error gui-text"></a>
-            <a class="error-text offline gui-text-flat"></a>
-            <a class="error-link gui-text underline" href="#"></a>
-        </div>
+        {{#if errorMessage}}
+            <div class="error-message">
+                <a class="close-error gui-text" {{action hideError target="controller"}}></a>
+                <a class="error-text offline gui-text-flat">{{errorMessage}}</a>
+            </div>
+        {{/if}}
     </div><!-- #add-node -->
 
 
