--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -190,7 +190,8 @@ th
   right : 0
 
 footer
-  padding : 0 25px 0
+  padding       : 0 25px 0
+  margin-bottom : 25px
 
   .title-box
     dimensions(16%, auto)
